part3/pingpong/g_manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong
  labels:
    app: ping-pong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
      - name: ping-pong
        image: macrichard/ping-pong:4.5
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
