part3/pingpong/g_manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
  namespace: default
spec:
  type: LoadBalancer  
  selector:
    app: ping-pong
  ports:
    - port: 5000      
      targetPort: 5000
