part3/pingpong/g_manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:
    networking.gke.io/health-check-path: /health

spec:
  rules:
  - http:
      paths:
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: ping-pong-svc
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: log-output-svc
            port:
              number: 5000
